# PumpStatin-test

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  run-frontend.ps1
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/algorithms/: base.py
apps/api/app/algorithms/bps_w_stub/: __init__.py  algorithm.py
apps/api/app/algorithms/bps_w_v1/: __init__.py  algorithm.py
apps/api/app/api/: deps.py  deps_profile.py
apps/api/app/api/routes/: admin.py  auth.py  catalog.py  config.py  selection.py
apps/api/app/core/: config.py  profile_loader.py  registry.py  security.py
apps/api/app/db/: base.py  init_db.py  models.py
apps/api/app/db/adapters/: mock.py  postgres.py
apps/api/app/pdf/: base.py  jinja_renderer.py  reportlab_build.py
apps/api/app/pdf/templates/acme-datasheet/: template.html
apps/api/app/pdf/templates/aqua-report/: template.html
apps/api/app/pdf/templates/nord-compact/: template.html
apps/api/app/pdf/templates/strela-standard/: template.html
apps/api/app/services/: accounts.py  config_store.py
conductor/: product.md  tech-stack.md
context/: admin-db-access.md  admin-panel.md  appearance-funnel-api-2026-04-10.md  architecture-summary.md  auth-and-cards-2026-04-06.md  db-constructor-implementation.md  deployment-83.222.16.200.md  frontend-fonts.md  frontend-from-demo.md  gui-db-constructor-ux.md  pptx-slides-1-4.json  ssh-and-github.md  strela-classes.txt  strela-ui-clone.md  template-reference.md  users-and-selection-stages.md
deploy/: bootstrap-server.sh  (+11 more)
(+227 files in other folders)
