[project]
name = "pumpstation-api"
version = "0.1.0"
description = "Pump station selection API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.9",
  "openpyxl>=3.1.5",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "pyyaml>=6.0.2",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "jinja2>=3.1.4",
  "reportlab>=4.2.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0.1,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "httpx>=0.28.0", "ruff>=0.8.0"]
pdf = ["xhtml2pdf>=0.2.16"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
